gccida/c1/function_units_used
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:11979:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode attr_mode; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:11980:1: error: must use 'enum' tag to refer to type 'attr_pent_pair'
attr_pent_pair attr_pent_pair; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12042:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory attr_memory; // [rsp+8h] [rbp-70h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12047:1: error: must use 'enum' tag to refer to type 'attr_athlon_decode'
attr_athlon_decode attr_athlon_decode; // [rsp+28h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12050:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode v74; // [rsp+3Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:11979:11: note: enum 'attr_mode' is hidden by a non-type declaration of 'attr_mode' here
attr_mode attr_mode; // r14d 
          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12052:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits attr_athlon_fpunits; // [rsp+44h] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12065:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
immediate_operand( recog_data_0.operand[1], VOIDmode); 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12087:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v11 = immediate_operand( recog_data_0.operand[1], VOIDmode); 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12104:28: error: subscripted value is not an array, pointer, or vector
v8 = *(long long *)0x691168[attr_type - 12]; 
                   ~~~~~~~~^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/insn-attrtab.c:12177:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v28 = general_operand( recog_data_0.operand[0], QImode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/function_units_used/src/obj/insn-attrtab.o] Error 1
